2014-06-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c src/win/wgdiplus.cpp:
	Grey out key entries when corresponding plot is toggled off.

	* src/win/wgraph.c (GraphUpdateWindowPosSize) src/win/wgnuplib.h
	term/win.trm (WIN_options):  Immediately apply changes to window
	position and size.
	Bug #1400

	* src/datafile.h:  Revert the Windows LFS changes for now as
	they seem to cause problems on some systems.

2014-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/gadgets.c src/misc.c src/set.c src/unset.c:
	Replace magic numbers with LAYER_{BEHIND|BACK|FRONT}.

	* src/graph3d.c: Remove obsolete (always true) conditional
	USE_GRID_LAYERS.  Minor clean up for the grid layer logic.

2014-06-01  Tatsuro MATSUOKA <tmacchant3@yahoo.co.jp>

	* win/gnuplot.iss:  Include gnuplot_qt.exe in installer.
	Patch #689

	* src/qtterminal/gnuplot_qt.cpp:  Search for Qt translation files
	in gnuplot's installation directory on Windows.
	Patch #687

2014-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h:  Partial support for LFS on Windows. Currently 
	mostly useful for 64 bit builds since integers on the the gnuplot
	command line are limited to 31bits otherwise.
	Patch #675

2014-06-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Target 'clean' and 'veryclean' include 
	Qt files, see patch #688.

	* config/mingw/Makefile win/gnuplot.iss:  Include RELEASE_NOTES.
	Add "qt" as option as default terminal.

2014-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/cairo.trm:  The "header" keyword for epslatex
	and related terminals can introduce a string of arbitrary length.
	Therefore it is not safe to try to store it in the fixed length 
	term_options character array.
	Bug #1413

	* term/gd.trm:  Limit the stored length of the font so that term_options
	cannot overflow.
	Bug #1413

	* Makefile.am RELEASE_NOTES:  Include Release Notes in the distribution
	package.
